--- a/css/style.css
+++ b/css/style.css
@@ -1,81 +1,81 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap')
-
-*, *::before, *::after{
-    box-sizing: border-box; 
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap") *,
+  *: : before, *: : after {
+  box-sizing: border-box;
 }
 
-*{
-    margin: 0; 
-    padding: 0; 
+* {
+  margin: 0;
+  padding: 0;
 }
 
-ul[role='list'], ol[role='list']{
-    list-style: none; 
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
 }
 
-html:focus-within{
-    scroll-behavior: smooth; 
+html:focus-within {
+  scroll-behavior: smooth;
 }
 
-a:not([class]){
-    text-decoration-skip-ink: auto; 
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
 .wrapper {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    background-color:#2c292d;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2c292d;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .clock {
-    font-family: "Fira Code", monospace;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    color: #ff6188;
-    width: 100%;   
-    text-align: center;
-   
+  font-family: "Fira Code", monospace;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  color: #ff6188;
+  width: 100%;
+  text-align: center;
 }
 
 .pink {
-    color: #ff6188;
+  color: #ff6188;
 }
 
 .orange {
-    color: #fc9867;
+  color: #fc9867;
 }
 
 .yellow {
-    color: #ffd866;
+  color: #ffd866;
 }
 
 .green {
-    color:#aadc76 ;
+  color: #aadc76;
 }
 
 .blue {
-    color: #78dce8;
+  color: #78dce8;
 }
 
 .violet {
-    color: #afa1f2;
+  color: #afa1f2;
 }
 
 #time {
-    font-size: 5.2cqw;
+  font-size: 5.2cqw;
 }
 
 .info {
-    color: #FFFFFF;
-    font-family: "Fira Code", monospace;
+  color: #ffffff;
+  font-family: "Fira Code", monospace;
+  text-align: center;
 }
 
 .info a {
-    color: white;
-    cursor: pointer;
+  color: white;
+  cursor: pointer;
 }
